--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8&orgId=00D5j00000DqpVq" method="POST" onsubmit="beforesubmit()">
     
     <input type=hidden name="oid" value="00D5j00000DqpVq">
-    <input type=hidden name="retURL" value="">
+    <input type=hidden name="retURL" value="https://shaikasfiya1.github.io/Web-to-Lead-Form/thanks.html">
     <input type=hidden name="Lead_Date__c" class="outputdate">
     <label for="first_name">First Name</label>
     <input required="true" id="first_name" maxlength="40" name="first_name" size="20" type="text" /><br>
