--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <input type=hidden name="oid" value="00D5j00000DqpVq">
     <input type=hidden name="retURL" value="https://shaikasfiya1.github.io/Web-to-Lead-Form/thanks.html">
     <input type=hidden name="Lead_Date__c" class="outputdate">
-    <input type=hidden name='captcha_settings' value='{"keyname":"WebtoLeadForm","fallback":"true","orgId":"00D5j00000DqpVq","ts":""}'>
+    <input type=hidden name='captcha_settings' value='{"keyname":"WebToLead","fallback":"true","orgId":"00D5j00000DqpVq","ts":""}'>
     
 
     <label for="first_name">First Name</label>
