--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     
     <input type="submit" class="submitbtn" name="submit">
     <div class="g-recaptcha" 
-    data-callback="capthasuccess"
+    data-callback="capthasuccess()"
     data-sitekey="6LeSfMMpAAAAAJUbw4SdMEYBJHV9ykXh8YvT9_Ok"></div><br>
    
 
